js cross page fix, nav footer link alignment

--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -555,8 +555,8 @@ nav {
         @include mq-max("md") {
           flex-direction: column;
           align-items: flex-start;
-          gap: 0;
-          translate: 0 0;
+          gap: 6px;
+          translate: 0 8px;
         }
       }
 
